[gd_scene load_steps=13 format=2]

[ext_resource path="res://Art/MainMenuBackground.PNG" type="Texture" id=1]
[ext_resource path="res://Music/MenuMusic.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/LevelComplete.gd" type="Script" id=3]
[ext_resource path="res://Art/ButtonStyleHover.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/ButtonStylePressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/ButtonStyle.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/PermanentMarker-Regular.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 7 )

[node name="LevelComplete" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1919.0
margin_bottom = 1082.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]
margin_top = 56.6324
margin_right = 1912.0
margin_bottom = 205.632
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Level Complete"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Information" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.807843 )
margin_left = 631.91
margin_top = 241.629
margin_right = 1264.91
margin_bottom = 880.629
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="Information"]
margin_left = 52.2095
margin_top = 136.734
margin_right = 259.209
margin_bottom = 195.734
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Base Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreCount" type="Label" parent="Information/Score"]
margin_left = 301.0
margin_top = 4.0
margin_right = 532.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesDefeated" type="Label" parent="Information"]
margin_left = 34.0
margin_top = 205.0
margin_right = 242.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Enemies Defeated:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemiesDefeatedCount" type="Label" parent="Information/EnemiesDefeated"]
margin_left = 302.0
margin_top = 26.0
margin_right = 571.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusesCollected" type="Label" parent="Information"]
margin_left = 81.4597
margin_top = 299.755
margin_right = 315.46
margin_bottom = 358.755
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Bonuses Collected:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonusesCollectedCount" type="Label" parent="Information/BonusesCollected"]
margin_left = 273.0
margin_top = 6.0
margin_right = 526.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0 / 2"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="Label" parent="Information"]
margin_left = 46.368
margin_top = 373.49
margin_right = 280.368
margin_bottom = 432.49
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Death Count:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCount" type="Label" parent="Information/Deaths"]
margin_left = 270.0
margin_top = 7.0
margin_right = 572.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScore" type="Label" parent="Information"]
margin_left = 80.3475
margin_top = 494.474
margin_right = 314.347
margin_bottom = 553.474
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Total Score:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TotalScoreCount" type="Label" parent="Information/TotalScore"]
margin_left = 274.0
margin_top = 7.0
margin_right = 522.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "0"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubTitle" type="Label" parent="Information"]
margin_left = 200.857
margin_top = 29.1328
margin_right = 407.857
margin_bottom = 88.1328
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 0.905882, 1 )
text = "Statistics:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next Level" type="Button" parent="."]
margin_left = 769.525
margin_top = 927.441
margin_right = 1104.53
margin_bottom = 1023.44
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0.843137, 0.764706, 1 )
custom_colors/font_color_pressed = Color( 0.0235294, 0.843137, 0.764706, 1 )
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true
[connection signal="pressed" from="Next Level" to="." method="_on_Next_Level_pressed"]
